# northstar-ai-guard

./: .env.example  .gitignore  AGENTS.md  API_TESTING.md  README.md  main.py  pyproject.toml
app/: config.py  main.py
app/middleware/: auth.py  rate_limiter.py
app/models/: request.py
app/rag/: pdf_ingestion.py  spotlighting.py  vectorstore.py
app/rag/documents/: financial_report.txt  hr_policy.txt  it_handbook.txt  product_specs.txt
app/routes/: auth.py  documents.py
app/security/: content_moderation.py  input_guard.py  input_restructuring.py  system_prompt.py
app/services/: llm_service.py
tests/: test_auth.py  test_input_restructuring.py  test_rag_spotlighting.py  test_system_prompt.py
